# Programming-Directory

./: README  VHL Flash Game Design Document.odt  bashtest  emacs_practice1.text
BugFixes/geditdocsconversion/: index.page  test.page
C++/: first.cpp~  tutorialfirst.cpp
C++/C++LanguageTutorial/: a.out  declaringvars.cpp  declaringvars.cpp~  first.cpp  initializingvars.cpp  morestrings.cpp  second.cpp  strings.cpp
C/C_Tutorial/: #hello.c#  .#hello.c  a.out  hello.c  hello.c~
C/ctut/: a.out  cast_operator_demo  cast_operator_demo.c  cast_operator_demo.c~  cd4question1  ch4question1.c  ch4question1.c~  do_nothing.c  do_nothing.c~  example1  example1.c  example1.c~  example2  example2.c  example2.c~
Hello World/: helloworld.php
LaTeX/: 3rddocument.tex  3rddocument.tex~  handy_computer_shortcuts.tex  handy_computer_shortcuts.tex~  myfirstdocument.tex  seconddocument-letter.tex  seconddocument.tex  seconddocument.tex~
Learning PHP, MySQL, & Javascript/: testing.html  testing.html~  urlget_test.html  urlget_test.php  urlpost.html  urlpost.html~  urlpost.php
Learning PHP, MySQL, & Javascript/Examples/: .project  exampl6-14.php  example3-10.php  example3-11.php  example3-12.php  example3-13.php  example3-14.php  example3-15.php  example3-16.php  example3-17.php  (+72 more)
Python/: dropped text.txt  messingaround.py
bash/: hello_world~  todo_list_backup
gettingthingsgnome/: directorynameinfo.txt
gnome_projects/guitar-tuner/: Makefile.am  configure.ac
gnome_projects/guitar-tuner/src/: Makefile.am  guitar_tuner.py
mit_ocw/: problem_set_1a.py  problem_set_1a.py~
(+1457 files in other folders)
